chore: replace all references of opengym with fittrix
